@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+212-Oct-2010 Christophe Demko
+ # [#21386] Category field includes categories user does not have permission to save to. (Elin Waring)
+
 21-Oct-2010 Christophe Demko
  # [#22811] Get the proper model in the category controller (bill richardson)
  # [#22936] Update Hathor with permissions changes from Tracker #22529 (Andrea Tarr)
